--- a/top/article/01_article.html
+++ b/top/article/01_article.html
@@ -17,6 +17,7 @@
                 <li><a href="../issues/01_issues.html">01_issues</a></li>
                 <li><a href="../service_guide/01_service_guide.html">01_service_guide</a></li>
                 <li><a href="../service_guide/02_service_guide.html">02_service_guide</a></li>
+                <li><a href="../../static_web/gcp/www/01.test.html">static_web/gcp/www/01_test.html</a></li>
             </ul>
         </div>
         <div class="main">
