--- a/top/issues/01_issues.html
+++ b/top/issues/01_issues.html
@@ -20,6 +20,8 @@
                 <li class="current"><a href="01_issues.html">01_issues</a></li>
                 <li><a href="../service_guide/01_service_guide.html">01_service_guide</a></li>
                 <li><a href="../service_guide/02_service_guide.html">02_service_guide</a></li>
+                <li><a href="../../static_web/gcp/www/01.test.html">static_web/gcp/www/01_test.html</a></li>
+           
             </ul>
         </div>
 
